# comfysql

./: .gitignore  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  EXAMPLES.md  INSTALL.md  LICENSE  README.md  STARTERS.md  TUTORIAL.md  comfy-agent-copy.json  pyproject.toml
.state/: sql_asset_aliases.json  sql_character_bindings.json  sql_presets.json  sql_profiles.json  sql_registry.json  sql_schema_cache.json  sql_workflow_slots.json
examples/: bets_test_run.md  character_clause_report.md  run01_txt2img_empty_latent.md  sql_report_demo.md  sql_report_from_comfysql.md  sql_report_from_terminal.md  txt2img_all_combs.md
input/assets/: nick.jpg.avif  smiling-young-woman.avif
input/workflows/: img2img_2_inputs.json  img2img_controlnet.json  img2img_reference.json  txt2img_empty_latent.json
openclaw/: OPENCLAW.md
openclaw/asset_preflight_for_workflow/: SKILL.md  asset_preflight_for_workflow.sh
openclaw/batch_sql_runner/: SKILL.md  batch_sql_runner.sh
openclaw/cli_doctor/: SKILL.md  cli_doctor.sh
openclaw/comfysql_query_ops/: SKILL.md  comfysql_query_ops.sql
openclaw/connectivity_triage/: SKILL.md  connectivity_triage.sh
openclaw/copy_assets/: SKILL.md  copy_assets.sh
openclaw/img2img_2_inputs/: SKILL.md  img2img_2_inputs.sql
openclaw/img2img_reference/: SKILL.md  img2img_reference.sql
openclaw/model_inventory_check/: SKILL.md  model_inventory_check.sql
openclaw/preset_profile_manage/: SKILL.md  preset_profile_manage.sql
src/comfy_custom/: cli.py  (+4 more)
tests/: test_cli_unit.py  test_dropbox_pull.py  test_sql_engine.py  test_submit_integration.py
(+26 files in other folders)
