[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfysql"
version = "0.1.0"
description = "ComfySQL CLI for managing and running ComfyUI workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "websocket-client>=1.8.0",
  "websockets>=12.0",
  "rich>=13.7.0",
  "huggingface_hub>=0.24.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "aiohttp>=3.9",
]

[project.scripts]
comfy-agent = "comfy_custom.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
